hiding member pronoun of profile page if not specified

--- a/app/views/members/_show.html.haml
+++ b/app/views/members/_show.html.haml
@@ -10,8 +10,9 @@
     .row
       .medium-8.columns
         %dl
-          %dt Pronouns
-          %dd= member.pronouns || "Not specified"
+          - if member.pronouns.present?
+            %dt Pronouns
+            %dd= member.pronouns || "Not specified"
 
           %dt Email
           %dd= mail_to member.email, member.email
