--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -39,7 +39,7 @@
           - if @invitation.attending.eql?(true)
             - if @invitation.for_student?
               %p
-                You will be working on...
+                %small You will be working on...
                 = form_tag update_note_invitation_path(@invitation) do
                   = select_tag :note, options_for_select(@tutorial_titles, @invitation.note)
                   %br
@@ -67,11 +67,12 @@
             - else
               - if @workshop.student_spaces?
                 = simple_form_for @invitation, url: :accept_with_note_invitation, method: :post do |f|
-                  = f.input :note, label: "I will be working on... ", collection: @tutorial_titles, required: true, include_blank: false
+                  = f.input :note, label: "What do you plan to work on?", collection: @tutorial_titles, required: true, include_blank: true
+                  %br
                   = f.button :submit, "Attend",  class: "button expand round"
-                  %label *Letting us know what you plan to work on will help us pair you up with a coach.
               - else
                 = render partial: 'invitation/waiting_list', locals: { invitation: @invitation }
+          Read our #{link_to "attendance policy", attendance_policy_path}
 
 
 .stripe
