change contact email included in invitations to workshop’s chapter email fixes #333

--- a/app/views/shared_mailers/_social.html.haml
+++ b/app/views/shared_mailers/_social.html.haml
@@ -17,6 +17,9 @@
         %tr
           %td
             %h5=t("footer.contact_info")
-            %p Email: <strong><a href="emailto:hello@codebar.io">hello@codebar.io</a></strong>
+            %p
+              Email:
+              %strong
+                =mail_to contact_email, contact_email
 
       %span.clear
