--- a/app/views/invitation/_coach.html.haml
+++ b/app/views/invitation/_coach.html.haml
@@ -10,4 +10,4 @@
 
 %p
   = t('coaches.food')
-  #{mail_to @invitation.sessions.chapter.email, @invitation.sessions.chapter.email}.
+  #{mail_to @invitation.workshop.chapter.email, @invitation.workshop.chapter.email}.
