--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -19,7 +19,7 @@
         %p
           %em
             Sponsored
-            = sponsor.sponsor_sessions.count
+            = sponsor.workshop_sponsors.count
             sessions
 
       .large-4.columns
