--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -27,7 +27,7 @@
 
         - elsif !@meeting.not_full
           %h5 This event is now full.
-          %strong To join the waitlist, please <a href="mailto:london@codebar.io">email us</a>.
+          %strong To join the waitlist, please <a href="mailto:monthlies@codebar.io">email us</a>.
 
         - else
           %h5 This event is not open for RSVP.
