improve content of attendance warning email as it’s incorrect

--- a/app/views/member_mailer/attendance_warning.html.haml
+++ b/app/views/member_mailer/attendance_warning.html.haml
@@ -1,15 +1,16 @@
 %h1 Hi #{@member.name},
 
 %p
-  We noticed that you have missed more than 3 workshops that you have RSVP'd to.
+  We noticed that you have missed more than 2 workshops that you have RSVP'd to.
   Because our workshops are heavily oversubscribed each week, we have a
   three-strikes policy. If you cannot make it to a workshop that you have
-  RSVP'd to, please cancel your spot via email before 2PM or get in touch with
-  us directly at london@codebar.io if something comes up very last-minute.
+  RSVP'd to, please remember to update your attendance details through our website before 3:30PM
+  at the latest on the day of the event.
 
 %p
-  Please be advised that if you miss one more workshop, we will temporarily
-  suspend your invitations for one month.
+  Please be advised that <strong>if you miss one more workshop, we will temporarily
+  suspend your membership</strong> for one month and you will not be able to attend
+  any of our workshops for that period of time.
 
 %p
   Thanks for your understanding.
