--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -5,13 +5,13 @@
   =link_to "#", class: 'item', "data-reveal-id" => "note-modal" do
     %i.fa.fa-pencil
     %label Note
-  - unless @member.coach?
+  - if @member.student?
     =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
       %i.fa.fa-envelope
       %label Eligibility
-    =link_to admin_member_send_attendance_email_path(@member), class: 'item' do
-      %i.fa.fa-clock-o
-      %label Attendance
+  =link_to admin_member_send_attendance_email_path(@member), class: 'item' do
+    %i.fa.fa-clock-o
+    %label Attendance
 
 %section
   .stripe.reverse
@@ -75,7 +75,7 @@
           .panel
             %p
               #{@member.name} RSVPed to
-              %label.label.secondary.round #{@member.session_invitations.accepted.count}
+              %label.label.secondary.round #{@invitations.accepted.count}
               workshops and attended
               %label.label.secondary.round #{@invitations.count}.
               - if @invitations.to_coaches.any? or @invitations.to_students.any?
@@ -83,11 +83,11 @@
                 %ul.no-bullet
                   - if @invitations.to_coaches.any?
                     %li
-                      %label.label.round #{@invitations.to_coaches.count}
+                      %label.label.round #{@invitations.to_coaches.attended.count}
                       times as a coach
                   - if @invitations.to_students.any?
                     %li
-                      %label.label.secondary.round #{@invitations.to_students.count}
+                      %label.label.secondary.round #{@invitations.to_students.attended.count}
                       times as a student
         - if @invitations.any?
           %p
@@ -104,6 +104,11 @@
               - workshop = invitation.sessions
               - if workshop.present?
                 %tr
+                  %td
+                    - if invitation.attended?
+                      %i.fa.fa-check
+                    - else
+                      %i.fa.fa-warning
                   %td
                     =link_to invitation_path(invitation) do
                       %label.label=workshop.chapter.name
