fix typos and add anchor

--- a/app/views/member_mailer/ban.html.haml
+++ b/app/views/member_mailer/ban.html.haml
@@ -6,7 +6,7 @@
 %p
   If this email has been sent because you have violated our attendancy policy you can read more about it #{link_to "here", attendance_policy_url}. Alternatively, please have a look at our eligibility criteria and code of conduct.
   %ul
-    %li= link_to "Elibility criteria", student_guide_url(:eligibility_criteria)
+    %li= link_to "Elibility criteria", student_guide_url(anchor: "eligibility_criteria")
     %li= link_to "Code of conduct", code_of_conduct_url
 
 %p
