--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -8,8 +8,8 @@
       .large-4.columns
         LOGO
       .large-3.columns
-        CONTACT(s)
-  - @sponsors.each do |sponsor|  
+        CONTACT(S)
+  - @sponsors.each do |sponsor|
     .row
       %hr
       .large-3.columns
