--- a/app/views/admin/meetings/_invitation_management.html.haml
+++ b/app/views/admin/meetings/_invitation_management.html.haml
@@ -21,14 +21,22 @@
       %br
 
   .row
-    .medium-6.columns
-      %h4
-        Participants
-        - @invitations.each do |invitation|
-          %ul.no-bullet
-            %li
-              .medium-8.columns
-                =link_to admin_member_path(invitation.member) do
-                  =invitation.member.full_name
-              .medium-4.small-12.columns
-                =link_to "Cancel attendance", admin_meeting_invitation_path(invitation, attendance_status: false), class: "button tiny alert", method: :put
+    .medium-12.columns#attendances
+      %h4 Participants
+      - @invitations.each do |invitation|
+        .attendee.medium-5.columns
+          .small-1.columns
+            - if (@meeting.date_and_time - 30.minutes).past?
+              - if invitation.attended?
+                = link_to '', admin_meeting_invitation_path(invitation, attendance_status: true, attended: false), class: 'fa fa-check-square-o', method: :put
+              - else
+                = link_to '', admin_meeting_invitation_path(invitation, attendance_status: true, attended: true),
+                class: 'fa fa-square-o',
+                method: :put
+                
+            - else
+              =link_to " ", admin_meeting_invitation_path(invitation, attendance_status: false, attended: false), class: "fa fa-minus-square-o", method: :put
+
+          .small-10.columns
+            =link_to admin_member_path(invitation.member) do
+              =invitation.member.full_name
