--- a/app/views/admin/meetings/edit.html.haml
+++ b/app/views/admin/meetings/edit.html.haml
@@ -12,8 +12,8 @@
               .large-4.columns
                 = f.input :slug
         .row
-          .large-6.columns
-            = f.input :date_and_time, as: :datetime, required: true, label: "Date"
+          .large-12.columns
+            = f.input :date_and_time, as: :datetime, required: true, label: "Date", input_html: { style: "width: 120px;" }
 
         .row
           .large-12.columns
