--- a/app/views/meeting_invitation_mailer/attending.html.haml
+++ b/app/views/meeting_invitation_mailer/attending.html.haml
@@ -30,7 +30,7 @@
                 =image_tag(@meeting.venue.avatar)
               %td
                 %h4
-                  Monthly
+                  Workshop
                   %small #{humanize_date_with_time(@meeting.date_and_time)}
                 %p
                   #{@meeting.venue.name}
