Fix broken cancellation link in monthlies emails

--- a/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
+++ b/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
@@ -21,7 +21,8 @@
                   = @meeting.description.html_safe
                 %h4
                   Can't make it anymore?
-                %p= "Please #{link_to 'cancel your attendance', meeting_path(@meeting)} by following the instructions on the event page.".html_safe
+                %p
+                  = "Please #{link_to 'cancel your attendance', @cancellation_url} by following the instructions on the event page.".html_safe
 
         .content
           %table{ bgcolor: "#FFFFFF" }
