--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -16,7 +16,10 @@
 
       %h4 RSVP
       - if logged_in?
-        - if current_user.banned?
+        - if @meeting.past?
+          %p This event has already occurred.
+
+        - elsif current_user.banned?
           %p Your invitations have been temporarily suspended.
 
         - elsif @meeting.attending?(current_user)
