Refactor actions into partial

--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -110,7 +110,7 @@
                 %tr
                   %td
                     - if invitation.attended?
-                      %i.fa.fa-checkbans
+                      %i.fa.fa-check
                     - else
                       %i.fa.fa-warning
                   %td
