--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -17,6 +17,10 @@
             - if invitation.member.newbie?
               %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "New attendee." }
                 %i.fa.fa-paw
+            - elsif invitation.member.more_than_two_absences?
+              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "More than 2 no-shows" }
+                %i.fa.fa-exclamation-circle
+
             =link_to admin_member_path(invitation.member) do
               - if invitation.member.full_name.blank?
                 = invitation.member.email
