--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -1,7 +1,9 @@
 %section#banner
   .row
-    .large-6.columns
+    .large-9.columns
       %h2=@sponsor.name
+    .large-3.columns
+      =link_to "Edit", edit_admin_sponsor_path(@sponsor), class: 'button round'
   .row
     .large-3.columns
       %h4 Address
@@ -16,13 +18,9 @@
     .large-3.columns
       %h4 Sponsored
       %ul.no-bullet
-        - @sponsor.sessions.each do |workshop|
+        - @sponsor.workshops.each do |workshop|
           %li
             =link_to admin_workshop_path(workshop) do
               %strong=workshop.chapter.name
               %br
               = humanize_date_with_time(workshop.date_and_time, workshop.time)
-    
-  .row
-    .large-12.columns.text-right
-      =link_to "Edit", edit_admin_sponsor_path(@sponsor), class: 'button round'
