--- a/app/views/admin/meetings/show.html.haml
+++ b/app/views/admin/meetings/show.html.haml
@@ -1,4 +1,7 @@
 .icon-bar.five-up
+  =link_to invite_admin_meeting_path(@meeting), class: 'item', title: "Invite" do
+    %i.fa.fa-send-o
+    %label Invite
   =link_to edit_admin_meeting_path(@meeting), class: 'item' do
     %i.fa.fa-pencil
     %label Edit
@@ -32,11 +35,17 @@
           %strong= @meeting.venue.name
           %br
 
-      .large-6.small-12.columns
+      .large-3.small-12.columns
         %h4 Team
         - @meeting.organisers.each do |organiser|
           %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
             = image_tag(organiser.avatar(40))
+
+      .large-3.columns
+        %h4 Chapters
+        - @meeting.chapters.each do |chapter|
+          %div
+            = chapter.name
     .row
       .large-8.columns
         %h4 Agenda
