# This is a combination of 2 commits. # The first commit's message is:
# This is a combination of 5 commits.
# The first commit's message is:
Monthly emails in app (#438)

* fix rendering problem with calling sessions on sponsor

* set up relationship btwn meeting and chapters

* wire up mailer

# The 2nd commit message will be skipped:

#	Absences grace period (#451)
#
#	* Flag absences only for members who accumulate more than 3 absences in last 6 months

# The 3rd commit message will be skipped:

#	Remove waitlisted members (#452)
#
#	* add more credentials
#
#	* Monthly emails in app (#438)
#
#	* fix rendering problem with calling sessions on sponsor
#
#	* set up relationship btwn meeting and chapters
#
#	* wire up mailer
#
#	* Add ability for admins to manually remove a waitlisted member from workshop mgmt page

# The 4th commit message will be skipped:

#	Expose event routes to orgs (#453)
#
#	* add more credentials
#
#	* Monthly emails in app (#438)
#
#	* fix rendering problem with calling sessions on sponsor
#
#	* set up relationship btwn meeting and chapters
#
#	* wire up mailer
#
#	* Add create event link to organiser sidebar

# The 5th commit message will be skipped:

#	Dont turn up early reminder (#454)
#
#	* add more credentials
#
#	* Monthly emails in app (#438)
#
#	* fix rendering problem with calling sessions on sponsor
#
#	* set up relationship btwn meeting and chapters
#
#	* wire up mailer
#
#	* Change copy

# The 2nd commit message will be skipped:

#	omg

--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -28,8 +28,8 @@
                 = invitation.member.full_name
           %td.small-6.columns
             %small=invitation.note
-            - if invitation.reminded_at.present?
-              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Email reminder." }
+            - if invitation.rsvp_time.present?
+              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Time of RSVP" }
                 %small
                   %i.fa.fa-clock-o
-                  =l(invitation.reminded_at)
+                  =l(invitation.rsvp_time)
