--- a/app/views/member_mailer/eligibility_check.html.haml
+++ b/app/views/member_mailer/eligibility_check.html.haml
@@ -3,26 +3,25 @@
 %p
   We noticed that you recently signed up for a codebar workshop. Our workshops are
   open to everyone who meet our
-  = link_to "eligibility criteria.", "http://codebar.io/faq"
+  = link_to "eligibility criteria.", "http://codebar.io/student-guide#eligibility"
 
 %p
   The reason we are getting in touch is because we cannot tell from your name or
   social media accounts if you identify as a female. Male students who belong
-  to an underrepresented minority group or identify as LGBTQ are welcome.
+  to an underrepresented ethnic minority group or identify as LGBTQ are welcome.
 
 %p
   %strong
     We wish we didn't have to do this, but we hope you understand why we need to ask.
     We would appreciate if you could reply to this email with a short confirmation
     that you belong to an eligible group (you do not need to specify which).
-  %strong
 
 %p
   We take this issue very seriously, and we appreciate your cooperation.
 
 %p
-  If you do not confirm over email before the upcoming workshop, the organisers
-  reserve the right to verify with you in person.
+  If you do not confirm over email by 12:00 on the day of the workshop, the organisers
+  will be reallocating your spot to the next person on the waitlist and suspending your invitations.
 
 %p
   Thanks for your understanding.
