--- a/app/views/session_invitation_mailer/attending.html.haml
+++ b/app/views/session_invitation_mailer/attending.html.haml
@@ -21,6 +21,11 @@
                     - if @invitation.role.eql?("Student")
                       If you haven't already, please remember to let us know what you will be working on through the invitation.
                   See you at our workshop!
+                  
+                  %p
+                    If you can no longer make it, please cancel your invitation <strong>before 15:00</strong> on the day of the event.
+                    <a href="https://codebar.io/student-guide#attendance">We have a three-strikes attendance policy for no-shows.</a>
+
                   %p
                     Please remember that removing the calendar entry will not cancel your invitation RSVP.
 
