--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -9,8 +9,8 @@
   .row
     .large-10.columns
       - if @event.announce_only
-        =link_to @event.url, class: 'button round' do
-          Sign up
+        =link_to @event.external_url, class: 'button round' do
+          Go to external booking site
       - else
         - if @event.invitable
           - unless @event.coaches_only?
