Monthly emails in app (#438)
* fix rendering problem with calling sessions on sponsor

* set up relationship btwn meeting and chapters

* wire up mailer

--- a/app/views/admin/events/edit.html.haml
+++ b/app/views/admin/events/edit.html.haml
@@ -47,6 +47,10 @@
           .large-12.columns
             %br
             = f.input :announce_only, as: :boolean, hint: "Events where invitations are not handled via our application"
+          .large-12.columns
+            %br
+            = f.input :external_url, label: 'External Registration URL', placeholder: 'include protocol, e.g. https://codebar.io'
+
         .row
           .large-12.columns
             %h5 Invitation details
@@ -80,10 +84,15 @@
               .row
                 .large-12.columns
                   = f.input :display_students, as: :boolean
+              .row
+                .large-12.columns
+                  = f.input :confirmation_required, as: :boolean, hint: "Will we be confirming members' attendance?"
+              .row
+                .large-12.columns
+                  = f.input :surveys_required, as: :boolean, hint: "Do we need to collect extra info?"
 
         .row
           .large-12.columns.text-right
             = f.submit "Save", class: "button"
-
 
 %br
